tests/fixtures/invalid/w016/missing_then.spec
behavior signup_flow "Signup Flow" {
  contract """user can sign up"""
  scenario "no then step" {
    given "user is on signup page"
    when "user fills in the form"
  }
}
